--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/barbersecur
 spring.datasource.username=root
 spring.datasource.password=2020_Rom
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.servlet.multipart.max-file-size=15MB
+spring.servlet.multipart.max-request-size=15MB
